<resources>
<!--    <string name=""></string>-->
    <string name="app_name">CH3_hw1_login</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="input_id">아이디를 입력하세요.</string>
    <string name="input_pwd">비밀번호를 입력하세요.</string>
    <string name="name">이름</string>
    <string name="input_name">이름을 입력하세요.</string>
    <string name="home_id">아이디 : spa001</string>
    <string name="exit">종료</string>
</resources>