<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/iv_my"
        android:src="@drawable/sign_up"
        android:layout_width="200dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />



    <TextView
        android:id="@+id/tv_name"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_my"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_name"
        android:hint="@string/input_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />



    <TextView
        android:id="@+id/tv_id"
        android:text="@string/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_id"
        android:hint="@string/input_id"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />



    <TextView
        android:id="@+id/tv_pwd"
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_id"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_pwd"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"

        app:layout_constraintTop_toBottomOf="@id/tv_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signup2"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@id/et_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>