<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/sparta_logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:scaleType="centerInside"
        />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        />


    <EditText
        android:id="@+id/input_id"
        android:hint="@string/input_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <TextView
        android:id="@+id/tv_pwd"
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_id"
        app:layout_constraintLeft_toLeftOf="@id/tv_id"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/input_pwd"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        />

    <Button
        android:id="@+id/btn_signup"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        />

<!--    <ImageButton-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btn_signup"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        android:padding="0dp"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:src="@drawable/sparta_btn_state"-->
<!--        android:scaleType="fitCenter"-->
<!--        />-->


</androidx.constraintlayout.widget.ConstraintLayout>